--- a/src/pages/Events.html
+++ b/src/pages/Events.html
@@ -4,11 +4,11 @@ description: "Meta description for the page"
 metaTitle: 'Title that shows up on social OG tags'
 tagTitle: 'Title that shows up on google, and is concatenated with | {{ client.name }}'
 preloadImg: '/images/imageName.format'
-preloadCSS: '/css/myafterlife.css'
-permalink: 'myafterlife/'
+preloadCSS: '/css/events.css'
+permalink: 'events/'
 eleventyNavigation:
-    key: My Afterlife
-    order: 300
+    key: Events
+    order: 400
 ---
 
 <!-- Enter html code below -->
