--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -7,7 +7,7 @@ preloadImg: '/images/cabinets2-1920w.webp'
 preloadCSS: '/css/about.css'
 permalink: 'about/'
 eleventyNavigation:
-    key: About Us
+    key: About
     order: 200
 ---
 
