--- a/src/index.html
+++ b/src/index.html
@@ -43,9 +43,9 @@ eleventyNavigation:
     <div class="cs-right">
       <h2 class="cs-title">About Dave</h2>
       <p class="cs-text">
-       David McElwee was born and raised in Northwest Pennsylvania He earned a BS form the University of Pittsburgh and an MS in clinical psychology from the University of La Verne. During his career, he has worked to build bridges past barriers in supporting people living with developmental disabilities. My Afterlife is his first novel. 
+       David McElwee was born and raised in Northwest Pennsylvania. He earned a B.S. form the University of Pittsburgh and an M.S. in clinical psychology from the University of La Verne. During his career, he has worked to build bridges past barriers in supporting people living with developmental disabilities. My Afterlife is his first novel. 
       </p>
-      <a href="/about" class="button-solid">Contact Me</a>
+      <a href="/about" class="button-solid">Contact Dave</a>
     </div>
   </div>
 </section>
