Edit Contact Page

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -5,7 +5,7 @@ metaTitle: 'Title that shows up on google searches'
 tagTitle: 'About'
 preloadImg: '/images/cabinets2-1920w.webp'
 preloadCSS: '/css/about.css'
-permalink: 'about/'
+permalink: '/#sbs'
 eleventyNavigation:
     key: About
     order: 200
@@ -18,7 +18,7 @@ eleventyNavigation:
 <!-- ============================================ -->
 
 <section id="int-hero">
-  <h1 id="home-h">About Us</h1>
+  <h1 id="home-h">About David McElwee</h1>
   {% image './src/images/cabinets2.jpg', 'cabinets', '', 'lazy', '(max-width: 850px) 850px, 1920px'%}
 </section>
 
