--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -18,7 +18,7 @@ eleventyNavigation:
 <!-- ============================================ -->
 
 <section id="int-hero">
-  <h1 id="home-h">Contact Us</h1>
+  <h1 id="home-h">Contact David McElwee</h1>
   {% image './src/images/cabinets2.jpg', 'cabinets', '', 'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
 </section>
 
@@ -30,7 +30,6 @@ eleventyNavigation:
   <div class="cs-container">
     <form id="cs-form" name="Contact Form" method="post">
       <div class="cs-content">
-        <span class="cs-topper">Contact</span>
         <h2 class="cs-title">Get in Touch</h2>
         <p class="cs-text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ridiculus elementum ullamcorper ipsum porttitor aliquam. Id magna urna ultrices odio pulvinar. Sed ut.
@@ -47,10 +46,6 @@ eleventyNavigation:
       <label>
                 Phone
                 <input required type="text" id="phone" name="phone" placeholder="Phone">
-      </label>
-      <label>
-                How Did You Find Us
-                <input type="text" id="find" name="find-us" placeholder="How did you find us?">
       </label>
       <label class="cs-label-message">
                 Message
