Home page tweaks

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,9 @@ eleventyNavigation:
 
 <section id="hero">
   <div class="cs-container">
+    <div class="cs-left">
+      {% image './src/images/cover3.png', 'mountains', 'cs-picture1', 'eager', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
+    </div>  
     <div class="cs-flex-group">
       <span class="cs-topper">Available Now</span>
       <h1 class="cs-title">My Afterlife</h1>
@@ -37,7 +40,7 @@ eleventyNavigation:
   <div class="cs-container">
     <!-- Left Image Section -->
     <div class="cs-left">
-      {% image './src/images/cabinets2.jpg', 'house', 'cs-picture cs-picture1', 'lazy'%}
+      {% image './src/images/portrait.jpg', 'house', 'cs-picture cs-picture1', 'lazy'%}
     </div>
     <!-- Right Content Section-->
     <div class="cs-right">
@@ -58,7 +61,7 @@ eleventyNavigation:
   <div class="cs-container">
     <!-- Left Image Section -->
     <div class="cs-left">
-      {% image './src/images/cover1.jpg', 'house', 'cs-picture cs-picture1', 'lazy'%}
+      {% image './src/images/cover-mock-thick.png', 'house', 'cs-picture cs-picture1', 'lazy'%}
     </div>
     <!-- Right Content Section-->
     <div class="cs-right">
@@ -67,7 +70,7 @@ eleventyNavigation:
         My Afterlife will appeal to mature readers fascinated in the beauty of subtle changes like dandelions appearing or the glee when drinking a milkshake while acutely aware of life’s unpleasantries. Skeeter McGee shares this intrigue and trepidation with the reader as a small-town genius whose life is truncated minutes before he’s to graduate as valedictorian...
       </p>
       <a href="" class="button-solid">Learn More</a>
-      <a href="" class="button-solid">Buy Now</a>
+      <a href="" class="button-solid">Get a Copy</a>
     </div>
   </div>
 </section>
@@ -88,7 +91,7 @@ eleventyNavigation:
     </p>
     <a href="/contact" class="button-solid">Subscribe</a>
   </div>
-  {% image './src/images/cabinets2.jpg', 'kitchen cabinets', '', 'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
+  {% image './src/images/smethport-hero.jpg', 'kitchen cabinets', '', 'lazy', '(max-width: 400px) 400px, (max-width: 850px) 850px, 1920px'%}
 </section>
 
 <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
