--- a/src/index.html
+++ b/src/index.html
@@ -44,11 +44,12 @@ eleventyNavigation:
     </div>
     <!-- Right Content Section-->
     <div class="cs-right">
+      <span class="cs-topper">Meet the Author</span>
       <h2 class="cs-title">About Dave</h2>
       <p class="cs-text">
        David McElwee was born and raised in Northwest Pennsylvania. He earned a B.S. form the University of Pittsburgh and an M.S. in clinical psychology from the University of La Verne. During his career, he has worked to build bridges past barriers in supporting people living with developmental disabilities. My Afterlife is his first novel. 
       </p>
-      <a href="/about" class="button-solid">Contact Dave</a>
+      <a href="/about" class="button-solid">Contact</a>
     </div>
   </div>
 </section>
@@ -65,6 +66,7 @@ eleventyNavigation:
     </div>
     <!-- Right Content Section-->
     <div class="cs-right">
+      <span class="cs-topper">New Release!</span>
       <h2 class="cs-title">My Afterlife</h2>
       <p class="cs-text">
         My Afterlife will appeal to mature readers fascinated in the beauty of subtle changes like dandelions appearing or the glee when drinking a milkshake while acutely aware of life’s unpleasantries. Skeeter McGee shares this intrigue and trepidation with the reader as a small-town genius whose life is truncated minutes before he’s to graduate as valedictorian...
