--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,8 @@ eleventyNavigation:
     <div class="cs-flex-group">
       <span class="cs-topper">Available Now</span>
       <h1 class="cs-title">My Afterlife</h1>
+      <p class="cs-text">Tincidunt lobortis feugiat vivamus at augue eget arcu dictum varius. Nibh tortor id aliquet lectus proin nibh condimentum.
+      </p>
       <a href="" class="cs-button-solid">Learn More</a>
     </div>
   </div>
