--- a/src/pages/myafterlife.html
+++ b/src/pages/myafterlife.html
@@ -11,4 +11,25 @@ eleventyNavigation:
     order: 300
 ---
 
-<!-- Enter html code below -->
+<!-- ============================================ -->
+<!--            Extra Content To Rank             -->
+<!-- ============================================ -->
+
+<section id="sbs-r">
+  <div class="cs-container">
+    <!-- Left Image Section -->
+    <div class="cs-left">
+      {% image './src/images/cover-mock-thick.png', 'house', 'cs-picture cs-picture1', 'lazy'%}
+    </div>
+    <!-- Right Content Section-->
+    <div class="cs-right">
+      <span class="cs-topper">New Release!</span>
+      <h2 class="cs-title">My Afterlife</h2>
+      <p class="cs-text">
+        My Afterlife will appeal to mature readers fascinated in the beauty of subtle changes like dandelions appearing or the glee when drinking a milkshake while acutely aware of life’s unpleasantries. Skeeter McGee shares this intrigue and trepidation with the reader as a small-town genius whose life is truncated minutes before he’s to graduate as valedictorian...
+      </p>
+      <a href="" class="button-solid">Learn More</a>
+      <a href="" class="button-solid">Get a Copy</a>
+    </div>
+  </div>
+</section>
