myafterlife page tweaks

--- a/src/pages/myafterlife.html
+++ b/src/pages/myafterlife.html
@@ -10,6 +10,14 @@ eleventyNavigation:
     key: My Afterlife
     order: 300
 ---
+<!-- ============================================ -->
+<!--                    LANDING                   -->
+<!-- ============================================ -->
+
+<section id="int-hero">
+  <h1 id="home-h">My Afterlife</h1>
+  {% image './src/images/smethport-hero.jpg', 'cabinets', '', 'lazy', '(max-width: 850px) 850px, 1920px'%}
+</section>
 
 <!-- ============================================ -->
 <!--            Extra Content To Rank             -->
@@ -23,12 +31,31 @@ eleventyNavigation:
     </div>
     <!-- Right Content Section-->
     <div class="cs-right">
-      <span class="cs-topper">New Release!</span>
+      <span class="cs-topper">Newman Springs Publishing</span>
       <h2 class="cs-title">My Afterlife</h2>
       <p class="cs-text">
         My Afterlife will appeal to mature readers fascinated in the beauty of subtle changes like dandelions appearing or the glee when drinking a milkshake while acutely aware of life’s unpleasantries. Skeeter McGee shares this intrigue and trepidation with the reader as a small-town genius whose life is truncated minutes before he’s to graduate as valedictorian...
       </p>
-      <a href="" class="button-solid">Learn More</a>
+      <p class="cs-text">
+        During his brief life, curiosity leads Skeeter to identify events and decisions 
+        guiding him to those he loves, including a merry-go-round ride resulting 
+        in lifelong friendships, a curious connection with a maternalistic junkman, 
+        and a simple decision resulting in his own death. However, that morning, 
+        he rides his bicycle book bag to deliver gifts to his four best friends.
+      </p>
+      <p class="cs-text">
+        Years later, three of these gifts (the drumsticks, skeleton keys, and scapular) 
+        are instrumental in saving the life of its recipient during adulthood. The 
+        fourth, a pair of yellow earrings, sparks an odyssey in which a young 
+        woman from a distant city is thrust into an unexpected life
+      </p>
+      <p class="cs-text">
+        My Afterlife tethers tragic events and humorous situations to complex 
+        human experiences such as faith, death, and social complications 
+        encountered by each as time passes during their journey. Hopefully, the 
+        reader will reflect on their own life, shaped by important (and unimportant) 
+        events and decisions, leading them to ask, “What if…?”
+      </p>
       <a href="" class="button-solid">Get a Copy</a>
     </div>
   </div>
