--- a/src/pages/myafterlife.html
+++ b/src/pages/myafterlife.html
@@ -60,3 +60,102 @@ eleventyNavigation:
     </div>
   </div>
 </section>
+
+<!-- ============================================ -->
+<!--                   Reviews                    -->
+<!-- ============================================ -->
+
+<section id="reviews">
+  <div class="title-container">
+    <span class="topper">Our Reviews</span>
+    <h2 class="title">Words From Our Customers</h2>
+  </div>  
+  <div class="review-container">
+    <div class="review">
+      <picture>
+        <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile.svg" alt="" width="99" height="99">
+      </picture>
+      <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
+                </p>
+      <div class="star-group">
+        <span class="name">B Miller<span class="desc">Homeowner</span></span>
+        <picture>
+          <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/stars.svg" alt="stars" width="91" height="15">
+        </picture>
+      </div>
+    </div>
+    <div class="review">
+      <picture>
+        <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile.svg" alt="" width="99" height="99">
+      </picture>
+      <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
+                </p>
+      <div class="star-group">
+        <span class="name">Vincent M.<span class="desc">Homeowner</span></span>
+        <picture>
+          <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/stars.svg" alt="stars" width="91" height="15">
+        </picture>
+      </div>
+    </div>
+    <div class="review">
+      <picture>
+        <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile.svg" alt="" width="99" height="99">
+      </picture>
+      <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
+                </p>
+      <div class="star-group">
+        <span class="name">Alex L.<span class="desc">Homeowner</span></span>
+        <picture>
+          <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/stars.svg" alt="stars" width="91" height="15">
+        </picture>
+      </div>
+    </div>
+    <div class="review">
+      <picture>
+        <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile-woman.svg" alt="" width="99" height="99">
+      </picture>
+      <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
+                </p>
+      <div class="star-group">
+        <span class="name">Arrieana M.<span class="desc">Homeowner</span></span>
+        <picture>
+          <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/stars.svg" alt="stars" width="91" height="15">
+        </picture>
+      </div>
+    </div>
+    <div class="review">
+      <picture>
+        <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile.svg" alt="" width="99" height="99">
+      </picture>
+      <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
+                </p>
+      <div class="star-group">
+        <span class="name">Leo N.<span class="desc">Homeowner</span></span>
+        <picture>
+          <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/stars.svg" alt="stars" width="91" height="15">
+        </picture>
+      </div>
+    </div>
+    <div class="review">
+      <picture>
+        <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile.svg" alt="" width="99" height="99">
+      </picture>
+      <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
+                </p>
+      <div class="star-group">
+        <span class="name">Brian A.<span class="desc">Homeowner</span></span>
+        <picture>
+          <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/stars.svg" alt="stars" width="91" height="15">
+        </picture>
+      </div>
+    </div>
+    <a aria-label="Read an Exerpt" href="/reviews" class="button-solid">Read an Exerpt</a>
+    <a aria-label="Read an Exerpt" href="/reviews" class="button-solid">Read an Exerpt</a>
+  </div>
+</section>
