--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,14 @@ eleventyNavigation:
       <span class="cs-topper">New Release!</span>
       <h2 class="cs-title">My Afterlife</h2>
       <p class="cs-text">
-        My Afterlife will appeal to mature readers fascinated in the beauty of subtle changes like dandelions appearing or the glee when drinking a milkshake while acutely aware of life’s unpleasantries. Skeeter McGee shares this intrigue and trepidation with the reader as a small-town genius whose life is truncated minutes before he’s to graduate as valedictorian...
+        My Afterlife unwraps the story of small-town friends as though watching them through a
+        rotating kaleidoscope. Together they face emotional ups and downs but none more
+        profound than the blunt force trauma of watching another’s kaleidoscope cease to
+        rotate.‘My Afterlife’ is a novel set in Smethport, Pennsylvania. It arrives just in time to celebrate the towns 170 th birthday. Coincidently, the novel ends following the extraordinary
+        fireworks capping Smethport’s 150 th birthday. ‘My Afterlife’ is an inside view of a little-
+        known story in which a truth was learned by the friends gathered at the cemetery while
+        the towns citizens surrounded the lake enjoying the ariel light show closing the
+        sesquicentennial twenty years ago!
       </p>
       <a href="" class="button-solid">Learn More</a>
       <a href="" class="button-solid">Get a Copy</a>
