--- a/src/pages/myafterlife.html
+++ b/src/pages/myafterlife.html
@@ -76,10 +76,10 @@ eleventyNavigation:
         <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile.svg" alt="" width="99" height="99">
       </picture>
       <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
+                "‘My Afterlife’ was a great read. It kept my attention as I was able to enjoy all of the small town references. The story came together well for an exciting ending!"
                 </p>
       <div class="star-group">
-        <span class="name">B Miller</span>
+        <span class="name">Deb S.</span>
       </div>
     </div>
     <div class="review">
@@ -87,10 +87,13 @@ eleventyNavigation:
         <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile.svg" alt="" width="99" height="99">
       </picture>
       <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
+                "What a great ride! A very touching story of great friendships tied together through the
+                life of one person showing that some souls are destined to forever be cosmically
+                connected. A witty and fun read full of laughs and some real-life twists. A rollercoaster
+                of emotions that’s bound to hit on all feels! I love this book!"
                 </p>
       <div class="star-group">
-        <span class="name">B Miller</span>
+        <span class="name">Patty H.</span>
       </div>
     </div>
     <div class="review">
@@ -98,10 +101,10 @@ eleventyNavigation:
         <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile.svg" alt="" width="99" height="99">
       </picture>
       <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
+                "An enlightening journey back to my youth."
                 </p>
       <div class="star-group">
-        <span class="name">B Miller</span>
+        <span class="name">PLS 2002</span>
       </div>
     </div>
     <div class="review">
@@ -109,10 +112,10 @@ eleventyNavigation:
         <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile.svg" alt="" width="99" height="99">
       </picture>
       <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
+                "Great read that will hopefully come to the big screen..."       
                 </p>
       <div class="star-group">
-        <span class="name">B Miller</span>
+        <span class="name">Lisa F.</span>
       </div>
     </div>
     <div class="review">
@@ -120,10 +123,11 @@ eleventyNavigation:
         <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile.svg" alt="" width="99" height="99">
       </picture>
       <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
+                "Mr. McElwee takes you through the mirror down a wonderful rabbit hole. Childhood
+                meets reality told like Stephen King. Captivating reading about life’s oddities."
                 </p>
       <div class="star-group">
-        <span class="name">B Miller</span>
+        <span class="name">EHB 3rd</span>
       </div>
     </div>
     <div class="review">
@@ -131,10 +135,12 @@ eleventyNavigation:
         <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile.svg" alt="" width="99" height="99">
       </picture>
       <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
+                "I loved the characters and saw my childhood in them. Growing up in a small town and
+                returning to it years later, I could relate to them young and when they were older. The
+                story was sweet, sad, and interesting. I really enjoyed it!"
                 </p>
       <div class="star-group">
-        <span class="name">B Miller</span>
+        <span class="name">Joan S.</span>
       </div>
     </div>
   </div>
