--- a/src/pages/reviews.html
+++ b/src/pages/reviews.html
@@ -30,10 +30,10 @@ eleventyNavigation:
         <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile.svg" alt="" width="99" height="99">
       </picture>
       <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
+                "‘My Afterlife’ was a great read. It kept my attention as I was able to enjoy all of the small town references. The story came together well for an exciting ending!"
                 </p>
       <div class="star-group">
-        <span class="name">B Miller<span class="desc">Homeowner</span></span>
+        <span class="name">Deb S.</span>
         <picture>
           <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/stars.svg" alt="stars" width="91" height="15">
         </picture>
@@ -44,10 +44,13 @@ eleventyNavigation:
         <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile.svg" alt="" width="99" height="99">
       </picture>
       <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
+                "What a great ride! A very touching story of great friendships tied together through the
+                life of one person showing that some souls are destined to forever be cosmically
+                connected. A witty and fun read full of laughs and some real-life twists. A rollercoaster
+                of emotions that’s bound to hit on all feels! I love this book!"
                 </p>
       <div class="star-group">
-        <span class="name">Vincent M.<span class="desc">Homeowner</span></span>
+        <span class="name">Patty H.</span>
         <picture>
           <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/stars.svg" alt="stars" width="91" height="15">
         </picture>
@@ -58,10 +61,10 @@ eleventyNavigation:
         <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile.svg" alt="" width="99" height="99">
       </picture>
       <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
+              "An enlightening journey back to my youth."
                 </p>
       <div class="star-group">
-        <span class="name">Alex L.<span class="desc">Homeowner</span></span>
+        <span class="name">PLS 2002</span>
         <picture>
           <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/stars.svg" alt="stars" width="91" height="15">
         </picture>
@@ -72,10 +75,10 @@ eleventyNavigation:
         <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile-woman.svg" alt="" width="99" height="99">
       </picture>
       <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
+                "Great read that will hopefully come to the big screen..."
                 </p>
       <div class="star-group">
-        <span class="name">Arrieana M.<span class="desc">Homeowner</span></span>
+        <span class="name">Lisa F.</span>
         <picture>
           <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/stars.svg" alt="stars" width="91" height="15">
         </picture>
@@ -86,10 +89,11 @@ eleventyNavigation:
         <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile.svg" alt="" width="99" height="99">
       </picture>
       <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
+                "Mr. McElwee takes you through the mirror down a wonderful rabbit hole. Childhood
+                meets reality told like Stephen King. Captivating reading about life’s oddities."
                 </p>
       <div class="star-group">
-        <span class="name">Leo N.<span class="desc">Homeowner</span></span>
+        <span class="name">EHB 3rd</span>
         <picture>
           <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/stars.svg" alt="stars" width="91" height="15">
         </picture>
@@ -100,10 +104,12 @@ eleventyNavigation:
         <img class="profile" loading="lazy" decoding="async" src="/assets/svgs/profile.svg" alt="" width="99" height="99">
       </picture>
       <p>
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
+                "I loved the characters and saw my childhood in them. Growing up in a small town and
+                returning to it years later, I could relate to them young and when they were older. The
+                story was sweet, sad, and interesting. I really enjoyed it!"
                 </p>
       <div class="star-group">
-        <span class="name">Brian A.<span class="desc">Homeowner</span></span>
+        <span class="name">Joan S.</span>
         <picture>
           <img aria-hidden="true" loading="lazy" decoding="async" src="/assets/svgs/stars.svg" alt="stars" width="91" height="15">
         </picture>
