--- a/src/pages/myafterlife.html
+++ b/src/pages/myafterlife.html
@@ -13,7 +13,6 @@ eleventyNavigation:
 <!-- ============================================ -->
 <!--                    LANDING                   -->
 <!-- ============================================ -->
-
 <section id="int-hero">
   <h1 id="home-h">My Afterlife</h1>
   {% image './src/images/smethport-hero.jpg', 'cabinets', '', 'lazy', '(max-width: 850px) 850px, 1920px'%}
@@ -146,4 +145,60 @@ eleventyNavigation:
   </div>
   <a aria-label="Read an Exerpt" href="/reviews" class="button-solid">Read an Exerpt</a>
   <a aria-label="Read an Exerpt" href="/reviews" class="button-solid">Join Our Newsletter</a>
+</section>
+
+<!-- ============================================ -->
+<!--                FACT VS FICTION               -->
+<!-- ============================================ -->
+
+<section id="fvf">
+  <div class="container">
+    <h2>Fact or Fiction</h2>
+    <div class="accordion">
+      <div class="accordion-item">
+        <button id="accordion-button-1" aria-expanded="true">
+          <span class="accordion-title">Whats the deal with the glass ball?</span>
+          <span class="icon" aria-hidden="true"></span>
+        </button>
+        <div class="accordion-content">
+        <p> Here you can put any information that you want we could even add pictures if you want!</p>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <button id="accordion-button-2" aria-expanded="false">
+        <span class="accordion-title">Why is the sky blue?</span>
+        <span class="icon" aria-hidden="true"></span>
+      </button>
+      <div class="accordion-content">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut. Ut tortor pretium viverra suspendisse potenti.</p>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <button id="accordion-button-3" aria-expanded="false">
+        <span class="accordion-title">Will we ever discover aliens?</span>
+        <span class="icon" aria-hidden="true"></span>
+      </button>
+      <div class="accordion-content">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut. Ut tortor pretium viverra suspendisse potenti.</p>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <button id="accordion-button-4" aria-expanded="false">
+        <span class="accordion-title">How much does the Earth weigh?</span>
+        <span class="icon" aria-hidden="true"></span>
+      </button>
+      <div class="accordion-content">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut. Ut tortor pretium viverra suspendisse potenti.</p>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <button id="accordion-button-5" aria-expanded="false">
+        <span class="accordion-title">How do airplanes stay up?</span>
+        <span class="icon" aria-hidden="true"></span>
+      </button>
+      <div class="accordion-content">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Elementum sagittis vitae et leo duis ut. Ut tortor pretium viverra suspendisse potenti.</p>
+      </div>
+    </div>
+  </div>
 </section>
