Fixed Fact vs Fiction

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@ eleventyNavigation:
     <div class="cs-flex-group">
       <span class="cs-topper">Available Now</span>
       <h1 class="cs-title">My Afterlife</h1>
-      <p class="cs-text">Tincidunt lobortis feugiat vivamus at augue eget arcu dictum varius. Nibh tortor id aliquet lectus proin nibh condimentum.
+      <p class="cs-text"> Discover the enduring power of kindness in the heartwarming tale of how one person's actions changed a small town forever.
       </p>
       <a href="" class="cs-button-solid">Learn More</a>
     </div>
@@ -49,7 +49,7 @@ eleventyNavigation:
       <span class="cs-topper">Meet the Author</span>
       <h2 class="cs-title">About Dave</h2>
       <p class="cs-text">
-       David McElwee was born and raised in Northwest Pennsylvania. He earned a B.S. form the University of Pittsburgh and an M.S. in clinical psychology from the University of La Verne. During his career, he has worked to build bridges past barriers in supporting people living with developmental disabilities. My Afterlife is his first novel. 
+       David McElwee was born and raised in Northwest Pennsylvania. He earned a B.S. from the University of Pittsburgh and an M.S. in clinical psychology from the University of La Verne. During his career, he has worked to build bridges past barriers in supporting people living with developmental disabilities. My Afterlife is his first novel. 
       </p>
       <a href="/about" class="button-solid">Contact</a>
     </div>
@@ -71,14 +71,10 @@ eleventyNavigation:
       <span class="cs-topper">New Release!</span>
       <h2 class="cs-title">My Afterlife</h2>
       <p class="cs-text">
-        My Afterlife unwraps the story of small-town friends as though watching them through a
-        rotating kaleidoscope. Together they face emotional ups and downs but none more
-        profound than the blunt force trauma of watching another’s kaleidoscope cease to
-        rotate.‘My Afterlife’ is a novel set in Smethport, Pennsylvania. It arrives just in time to celebrate the towns 170 th birthday. Coincidently, the novel ends following the extraordinary
-        fireworks capping Smethport’s 150 th birthday. ‘My Afterlife’ is an inside view of a little-
-        known story in which a truth was learned by the friends gathered at the cemetery while
-        the towns citizens surrounded the lake enjoying the ariel light show closing the
-        sesquicentennial twenty years ago!
+        My Afterlife unwraps the story of small-town friends as though watching them through a rotating kaleidoscope. Together they face emotional ups and downs but none more profound than the blunt force trauma of watching another’s kaleidoscope cease to rotate.
+      </p>
+      <p class="cs-text"> 
+        My Afterlife is a novel set in Smethport, Pennsylvania. It arrives just in time to celebrate the towns 170th birthday. Coincidently, the novel ends following the extraordinary fireworks capping Smethport’s 150th birthday. My Afterlife is an inside view of a little- known story in which a truth was learned by the friends gathered at the cemetery while the towns citizens surrounded the lake enjoying the arial light show closing the sesquicentennial twenty years ago!
       </p>
       <a href="" class="button-solid">Learn More</a>
       <a href="" class="button-solid">Get a Copy</a>
