--- a/src/pages/myafterlife.html
+++ b/src/pages/myafterlife.html
@@ -153,7 +153,10 @@ eleventyNavigation:
 
 <section id="fvf">
   <div class="container">
-    <h2>Fact or Fiction</h2>
+    <div class="title-container">
+      <span class="topper">Learn More</span>
+      <h2 class="title">Fact Or Fabrication</h2>
+    </div>
     <div class="accordion">
       <div class="accordion-item">
         <button id="accordion-button-1" aria-expanded="true">
